# ai-tool-weekly-review

./: README.md  install.py  pyproject.toml
claude-skill/: SKILL.md
hermes-skill/: SKILL.md
hermes-skill/references/: patterns.md  session-analysis.md
src/ai_tool_weekly_review/: __init__.py  analyzer.py  cli.py  reporter.py  scanner.py
